[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone_backend"}]

[tool.poetry.dependencies]
python = "^3.7"
Django = "~4.0"
black = "^22.8.0"
djangorestframework = "^3.14.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.133.5"}
strawberry-graphql-django = "^0.5.3"
PyJWT = "^2.5.0"
django-environ = "^0.9.0"
django-cors-headers = "^3.13.0"
requests = "^2.28.1"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.4"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
sentry-sdk = "^1.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
